# AI-in-Search-of-Hidden-Health-Signals

./: .dockerignore  .gitignore  Dockerfile  README.md  diagnose_columns.py  docker-compose.yml  experiment.ipynb  hybrid_experts.py  investigate.py  notebbok.ipynb  notebook optuna.ipynb  pyproject.toml  server.py  solution.py  testing.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
cesar exp/: 1.data_processing.ipynb  2.data_analysis.ipynb  3.baseline_model.ipynb
my-app/: package-lock.json  package.json
my-app/src/app/: globals.css  page.tsx
my-app/src/components/: HealthIntakeForm.tsx
my-app/src/components/forms/: FieldWrapper.tsx
my-app/src/components/layout/: MultiStepForm.tsx  StepIndicator.tsx  index.ts
my-app/src/views/HealthIntake/: HealthIntakeForm.tsx  ResultsView.tsx  index.ts  schema.ts  types.ts  utils.ts
my-app/src/views/HealthIntake/steps/: CognitionStep.tsx  (+8 more)
notebooks/: 1.data_processing.ipynb  2.data_analysis.ipynb  3.baseline_model.ipynb  Dockerfile.txt  Raul-modificado.py  Untitled.ipynb  notebook optuna (1).ipynb  notebook.ipynb  requirements.txt  server.ipynb  server.py
output/: cesar_vars_check.txt  feature_importance.csv  results.json
output_hybrid/: feature_importance_experts.csv  output_hybrid.rar  results.json
saved_models/: ensemble_arthritis.pkl  ensemble_cancer.pkl  ensemble_cvd.pkl  ensemble_diabetes.pkl  ensemble_lung.pkl  ensemble_memory.pkl  ensemble_psychiatric.pkl  ensemble_stroke.pkl
